<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_20sdp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"

    tools:context=".UserApp.fragment.BottomSheetFragment">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textColor="@color/black"
        android:fontFamily="@font/cambria_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/black"
        android:fontFamily="@font/cambria_regular"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginVertical="@dimen/_10sdp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter"
        android:textColor="@color/black"
        android:fontFamily="@font/cambria_regular"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginVertical="@dimen/_10sdp">
        <TextView
            android:id="@+id/hightolow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/highest_to_lowest"
            android:fontFamily="@font/cambria_regular"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/rount_btn_white"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:drawableRight="@drawable/uncheck"
            android:gravity="center"

            />
        <TextView
            android:id="@+id/lowtohigh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lowest_to_highest"
            android:fontFamily="@font/cambria_regular"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/rount_btn_white"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:drawableRight="@drawable/uncheck"
            android:layout_gravity="center"
            android:gravity="center"

            />
    </LinearLayout>





    <Button
        android:id="@+id/btnapply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rount_btn"
        android:text="@string/apply"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/cambria_bold"
        android:textColor="@color/white" />

</LinearLayout>

</androidx.cardview.widget.CardView>