<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".bidderContent.BidderLoginActivity">

    <include layout="@layout/tool_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_barLayout"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_ularo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/corners"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/abc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/change_password"
                android:fontFamily="@font/cambria_regular"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18sdp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/abc"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_password"
                            app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etcurrentpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/current_password"
                            android:fontFamily="@font/cambria_regular"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_password"
                            app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etnewpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/cambria_regular"
                            android:drawableLeft="@drawable/ic_password"
                            android:hint="@string/new_password"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:inputType="textPassword"
                            />
                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="* Alphanumeric With(One Special Character And One Small Letter And one Upper Case Letter To be Inserted Compulsorily"
                            android:textColor="@color/Light_Gray"
                            android:textSize="@dimen/_10sdp" />
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_password"
                            app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etconfirmpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/cambria_regular"
                            android:drawableLeft="@drawable/ic_password"
                            android:hint="@string/confirm_pass"
                            android:imeOptions="actionDone"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/bidder_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rount_btn"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/cambria_bold"
                    android:text="@string/submit"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textColor="@color/white" />


            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>