<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".bidderContent.BidderLoginActivity">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_barLayout"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_ularo" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:background="@drawable/corners"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/abc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_15sdp"
                android:text="Bidder Login"
                android:fontFamily="@font/cambria_regular"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18sdp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/abc"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="vertical"
                       >

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_mobile_no"
                            >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bid_mobile_tv"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_mobile_no"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="Mobile Number"
                            android:fontFamily="@font/poppins_regular"
                            android:imeOptions="actionNext"
                            android:maxLength="10"
                            android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_password"
                            app:passwordToggleEnabled="true"
                           >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etpassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:drawablePadding="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:drawableLeft="@drawable/ic_password"
                            android:hint="Password"
                            android:inputType="textPassword"
                            />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button

                        android:id="@+id/bidder_login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/rount_btn"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/cambria_bold"
                        android:text="Login"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/bod_forgot_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="Forgot Password"
                        android:layout_below="@id/bidder_login_btn"
                        android:fontFamily="@font/cambria_regular"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="normal" />

                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight=".3"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambria_regular"
                    android:gravity="center"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/tvsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:fontFamily="@font/cambria_bold"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/google_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="2">


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/com_facebook_auth_dialog_cancel_background"
                android:text="" />
            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sign_in_button"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:visibility="visible"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/mobileNo"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/facebook_sign_in_button"
                android:background="@drawable/facebook_button"
                android:drawableLeft="@drawable/ic_facebook"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/facebook"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/mobileNo"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/google_sign_in_button"
                android:background="@drawable/google_button"
                android:drawableLeft="@drawable/ic_google_icn"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/google"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>